# sentra-engine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml
cli/: CMakeLists.txt
cli/include/SentraCLI/CLI/: CLI.h  CLIContext.h  CLIWriter.h
cli/include/SentraCLI/Command/: CommandToken.h  CommandTrie.h
cli/include/SentraCLI/Utils/: StringUtils.h
cli/src/CLI/: CLI.cpp  CLIContext.cpp
cli/src/Command/: CommandTrie.cpp
core/: CMakeLists.txt
core/include/Sentra/Capture/: BoundedPacketBuffer.h  CaptureManager.h  CaptureSession.h  PacketProcessor.h
core/include/Sentra/Core/: Application.h  Logger.h
core/include/Sentra/Flow/: Flow.h  FlowFeatures.h  FlowFeaturesExtractor.h  FlowFeaturesSerializer.h  FlowKey.h  FlowManager.h  FlowPacket.h  FlowPacketParser.h
core/include/Sentra/Kafka/: KafkaFlowFeaturePublisher.h
core/include/Sentra/Network/: InterfaceManager.h
core/include/Sentra/Utils/: LoggerTags.h
core/src/Capture/: CaptureManager.cpp  CaptureSession.cpp  PacketProcessor.cpp
core/src/Core/: Application.cpp  Logger.cpp
core/src/Flow/: Flow.cpp  FlowFeaturesExtractor.cpp  FlowManager.cpp  FlowPacketParser.cpp
core/src/Kafka/: KafkaFlowFeaturePublisher.cpp
core/src/Network/: InterfaceManager.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
